Fix RenderProcessHostImpl::GetBlobURLLoaderFactory getting called after the profile has been deleted.

Bug: 817815
Change-Id: Ia38c1a5c3b14e2bda6f94e715f85ba38ab5b002a
Reviewed-on: https://chromium-review.googlesource.com/946677
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540617}
Former-commit-id: 144fcbba4c341839148bd896b9e0cfd21ddf06e7